--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 .App {
-  display: flex;
-  flex-direction: row;
   background-color: #d6d7db;
   height: 100vh;
+
   width: 100%;
+}
+.app-container {
+  display: flex;
+  flex-direction: row;
+  padding: 3rem;
+
+  height: auto;
 }
