--- a/src/Components/SearchBar/SearchButton/SearchButton.css
+++ b/src/Components/SearchBar/SearchButton/SearchButton.css
@@ -1,8 +1,20 @@
 .search-btn {
-  background-color: #f7f6f9;
   border-radius: 60px;
   border: none;
   width: 100%;
   height: 100%;
   padding: 0.5rem;
+  cursor: pointer;
+}
+.white-bg {
+  background-color: white;
+}
+.white-bg:hover {
+  background-color: #f7f6f9;
+}
+.gray-bg {
+  background-color: #f7f6f9;
+}
+.gray-bg:hover {
+  background-color: white;
 }
