creazione compinente initial search e fiz proporzioni

--- a/src/Components/MainCard/CloudInfo/CloudInfo.css
+++ b/src/Components/MainCard/CloudInfo/CloudInfo.css
@@ -1,6 +1,5 @@
 .cloud-info-container {
-  margin: 1.8rem;
-  margin-top: 0.1rem;
+  margin-block: 1.5rem;
   text-align: left;
 }
 .info-container {
