--- a/src/Components/MainCard/IconCard/IconCard.css
+++ b/src/Components/MainCard/IconCard/IconCard.css
@@ -1,8 +1,7 @@
 .container {
-  margin-inline: 2rem;
   border-bottom: 1px solid #f6f5f7;
-  margin-top: 0.5rem;
   padding-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 .icon {
   width: 100%;
