--- a/src/Components/MainCard/MainCard.css
+++ b/src/Components/MainCard/MainCard.css
@@ -1,8 +1,7 @@
 .main-card {
-  background-color: white;
   display: flex;
   flex-direction: column;
-
+  padding: 2rem;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
 
