--- a/src/Components/MainCard/SearchBar/AutocompleteItem/AutoCompleteItem.css
+++ b/src/Components/MainCard/SearchBar/AutocompleteItem/AutoCompleteItem.css
@@ -2,7 +2,10 @@
   color: black;
   padding: 1rem;
   cursor: pointer;
+  width: 100%;
+  font-size: small;
 }
 .item:hover {
+  width: 100%;
   background-color: #f7f6f9;
 }
